1.3.1
==================
freql: int16 support
templates: expression legal in for loop iter RHS value

1.3.0
==================
freql: fss-mysql implementation
freql: decimal null support

1.2.9
==================
templates: BUG: includes with internal variables mixed with extends weren't expanded properly

1.2.8
==================
server: BUG empty multipart form parts where triggering assertions incorrectly

1.2.7
==================
server: BUG: rewrote multipart header parser to be tail recursive

1.2.6
==================
Freql:  methods added directly to transaction object to make it behave more like a connection

1.2.5
==================
Freql: premature release of transaction connection fixed
Server: reexposed Fss.Server.version string
templates:  if x.y case fixed and tested

1.2
==================
Freql:  bug in Query led to delayed connection pool release for incomplete seq {} consumption
templates: ENH - range expressions for for loops implemented
templates: ENH - expressions allowed within {{ }} substitution blocks
templates: ENH - array indices implemented for expressions
templates: ENH - <= and >= implemented

1.1.5
==================
templates: overhaul of operator precedence to implement boolean expressions correctly
Freql:  handling nullable date fields implemented.

1.06
==================
templates: bug in double quoted string parsing fixed  "hello" not recognized :(
templates: != operator implemented for {% if %}
test:  additional unit tests for string , != operations
templates: == instead of = for equals comparison (for consistency with standard jinja2 docs)
templates: single variable to if {% if foo %} will test whether variable is set or has a non false value ("" and [||] considered false)
fss: added support for 302, 303, 304, and 307 response codes and http303 redirect helper
fss: added overridable preCheckFailed to UD and ability to modify url path within precheck

1.05
==================