@@ -3,3 +3,7 @@ Hack to get nuget working with F# in VS2013 Community edition
 
 'c:/bin/NuGet.exe' pack fss.fsproj -Properties 'TargetPath=bin/Debug/fss.dll'
 
+
+# publishing
+nuget push fss.1.3.1.0.nupkg -Source https://www.nuget.org/packages/fss
+
