@@ -1,4 +1,4 @@
 ﻿module version
 
 [<Literal>]
-let version = "1.3.0.0" 
+let version = "1.3.1.0" 
